--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation:
 
-    git clone git://github.com/gcuriel/dotvim.git ~/.vim
+    git clone git://github.com/gcuriel/vimfiles.git ~/.vim
 
 Create symlinks:
 
